# kruzna-karta-hrvatska

./: .dockerignore  .env.example  .env_sample  .gitignore  CHANGELOG.md  CLAUDE.md  Infrastructure.md  Key_business_logic.md  MAKEFILE.md  Makefile  PHASE3_ADVANCED_GEOCODING.md  README.md  Subagents.md  Troubleshooting.md  ZADAR_SCRAPER_ENHANCEMENT.md  debug_entrio.py  debug_entrio_detailed.py  debug_transformation.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  final_validation.py  index.html  package-lock.json  package.json  run_dubrovnik_scraper.py  show_enhanced_scraper_results.py  simple_test.py  start.sh  tailwind.config.ts  test_date_parsing_fix.py  test_infozagreb_scraper.py  test_results.md  test_zadar_scraper.py
backend/: .dockerignore  .env.example  Dockerfile  INFOZAGREB_SCRAPER_IMPROVEMENTS.md  LLM_LOCATION_GUIDE.md  MAINTENANCE_GUIDE.md  README.md  SCRAPER_IMPROVEMENTS.md  SECURITY_DEPLOYMENT.md  alembic.ini  config.yaml  debug_transformation.py  docker-compose.monitoring.yml  encryption.key  geocode_all_croatia_events.py  manage_db.py  pyproject.toml  run.py  run_dubrovnik_6months.py  run_dubrovnik_localhost.py  run_dubrovnik_quick.py  run_dubrovnik_scraper.py  run_dubrovnik_simple.py  test_comprehensive_geocoding.py  test_croatia_manual.py  test_croatia_scraper.py  test_enhanced_infozagreb.py  test_enhanced_scraper_simple.py  test_geocoding_fix.py  test_llm_location.py  test_no_proxy.py  test_phase3_geocoding.py  test_retroactive_geocoding.py  test_scraper_localhost.py  test_server.py  test_tzdubrovnik_scraper.py  test_tzdubrovnik_simple.py  update_croatia_locations.py  update_event_coordinates.py  validation_test.py  (+2 more)
backend/alembic/: env.py
backend/app/: celery_app.py  logging_config.py  main.py  main_demo.py
(+404 files in other folders)
