[project]
name = "kruzna-karta-backend"
version = "0.1.0"
description = "Backend API for Kruzna Karta Hrvatska"
authors = [
    {name = "Kruzna Karta Team", email = "team@kruznakarta.hr"}
]
# readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "psycopg2-binary>=2.9.7",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.0",
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "playwright>=1.40.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "schedule>=1.2.0",
    "boto3>=1.34.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "cryptography>=41.0.0",
    "qrcode[pil]>=7.4.0",
    "python-dateutil>=2.8.0",
    "stripe>=7.0.0",
    "email-validator>=2.2.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.12.7",
]
